Fixes elements visibility scrolled in dashboard on TV

--- a/clients/youtube_producer/styles/appmodes.styl
+++ b/clients/youtube_producer/styles/appmodes.styl
@@ -47,6 +47,13 @@
             }
         }
     }
+
+    yt-result-set {
+        display: block;
+        width: auto;
+        height: 800px;
+        overflow: hidden;
+    }
     
     .yt-result-set {
         transition: transform 0.5s ease-in-out;
